--- a/src/components/flow/designer/style/flow-area.scss
+++ b/src/components/flow/designer/style/flow-area.scss
@@ -1,92 +1,124 @@
-$active-color: #409EFF;
+$active-color: #409eff;
 
-.btn-wrapper-simple {
-    height: 24px !important;
-    line-height: 24px !important;
-}
-.vue-contextmenu-listWrapper {
-    padding-left: 1px !important;
-}
-.child-ul-wrapper {
-    padding-left: 1px !important;
-}
-
-.flow-container {
-    width: 1000%;
-    height: 1000%;
-    position: relative;
-    transition: transform 0.5s ease 0s,transform-origin 0.5s ease 0s;
-    
-    &.grid {
-        background-image: -webkit-linear-gradient(90deg, rgba(235, 235, 235, 1) 5%, rgba(0, 0, 0, 0) 5%);
-        background-image: -moz-linear-gradient(90deg, rgba(235, 235, 235, 1) 5%, rgba(0, 0, 0, 0) 5%);
-        background-image: -o-linear-gradient(90deg, rgba(235, 235, 235, 1) 5%, rgba(0, 0, 0, 0) 5%);
-        background-image: -webkit-gradient(linear, 0 100%, 0 0, color-stop(0.05, rgba(235, 235, 235, 1)), color-stop(0.05, rgba(0, 0, 0, 0)));
-        background-image: linear-gradient(90deg, rgba(235, 235, 235, 1) 5%, rgba(0, 0, 0, 0) 5%),linear-gradient(rgba(235, 235, 235, 1) 5%, rgba(0, 0, 0, 0) 5%);
-        background-size: 1rem 1rem;
-        z-index: 0;
+body {
+    .btn-wrapper-simple {
+        height: initial !important;
+        line-height: initial !important;
     }
-    
-    &.zoomIn {
-        cursor: zoom-in;
+    .vue-contextmenu-listWrapper,.child-ul-wrapper {
+        // padding-left: 1px !important;
+        padding: 3px 0!important;
+        background-color: rgba(249, 250, 251, 0.97)!important;
+        border: 1px solid #004849!important;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3)!important;
+        // width: 215px!important;
+        color: #004849!important;
+        .context-menu-list,.child-li-wrapper{
+            background: transparent !important; 
+            border-bottom: 1px solid #00484915!important;
+            margin:0!important;
+        }
+        .context-menu-list:hover,.child-li-wrapper:hover{
+            background: #e3e8eb !important;
+        }
+        .btn-wrapper-simple{
+            padding: 4px 10px !important;
+        }
+        .parent-name .icon {
+            top: 40% !important;
+            right: 8px!important;
+        }
+.has-child{
+    padding: 0 !important;
+}
     }
-    &.zoomOut {
-        cursor: zoom-out;
+    .no-child-btn {
+        padding-left: 1px !important;
     }
-    &.canScale {
-        cursor: url(../assets/search.png), default;
+
+    .flow-container {
+        width: 1000%;
+        height: 1000%;
+        position: relative;
+        transition: transform 0.5s ease 0s, transform-origin 0.5s ease 0s;
+
+        &.grid {
+            background-image: -webkit-linear-gradient(90deg, rgba(235, 235, 235, 1) 5%, rgba(0, 0, 0, 0) 5%);
+            background-image: -moz-linear-gradient(90deg, rgba(235, 235, 235, 1) 5%, rgba(0, 0, 0, 0) 5%);
+            background-image: -o-linear-gradient(90deg, rgba(235, 235, 235, 1) 5%, rgba(0, 0, 0, 0) 5%);
+            background-image: -webkit-gradient(
+                linear,
+                0 100%,
+                0 0,
+                color-stop(0.05, rgba(235, 235, 235, 1)),
+                color-stop(0.05, rgba(0, 0, 0, 0))
+            );
+            background-image: linear-gradient(90deg, rgba(235, 235, 235, 1) 5%, rgba(0, 0, 0, 0) 5%),
+                linear-gradient(rgba(235, 235, 235, 1) 5%, rgba(0, 0, 0, 0) 5%);
+            background-size: 1rem 1rem;
+        }
+
+        &.zoomIn {
+            cursor: zoom-in;
+        }
+        &.zoomOut {
+            cursor: zoom-out;
+        }
+        &.canScale {
+            cursor: url(../assets/search.png), default;
+        }
+        &.canDrag {
+            cursor: grab;
+        }
+        &.canMultiple {
+            cursor: url(../assets/multip-pointer.png), default;
+        }
     }
-    &.canDrag {
-        cursor: grab;
+
+    .rectangle-multiple {
+        position: absolute;
+        border: 1px dashed #31676f;
+        background-color: #0cceea29;
     }
-    &.canMultiple {
-        cursor: url(../assets/multip-pointer.png), default;
+
+    .flow-container-active {
+        background-color: #e4e4e438;
+        cursor: crosshair;
     }
-}
 
-.rectangle-multiple {
-    position: absolute;
-    border: 1px dashed #31676f;
-    background-color: #0cceea29;
-}
+    .auxiliary-line-x {
+        position: absolute;
+        border: 0.5px solid $active-color;
+        width: 100%;
+        z-index: 9999;
+    }
+    .auxiliary-line-y {
+        position: absolute;
+        border: 0.5px solid $active-color;
+        height: 100%;
+        z-index: 9999;
+    }
 
-.flow-container-active {
-    background-color: #e4e4e438;
-    cursor: crosshair;
-}
+    .link-active {
+        outline: 2px dashed $active-color;
+    }
 
-.auxiliary-line-x {
-    position: absolute;
-    border: 0.5px solid $active-color;
-    width: 100%;
-    z-index: 9999;
-}
-.auxiliary-line-y {
-    position: absolute;
-    border: 0.5px solid $active-color;
-    height: 100%;
-    z-index: 9999;
-}
+    .container-scale {
+        position: absolute;
+        top: 0;
+        left: 5px;
+    }
 
-.link-active {
-    outline: 2px dashed $active-color;
-}
+    .mouse-position {
+        position: absolute;
+        bottom: 0;
+        right: 5px;
+    }
 
-.container-scale {
-    position: absolute;
-    top: 0;
-    left: 5px;
-}
-
-.mouse-position {
-    position: absolute;
-    bottom: 0;
-    right: 5px;
-}
-
-.common-remarks {
-    width: 100px;
-    height: 150px;
-    position: absolute;
-    background-color: #ffffaa;
+    .common-remarks {
+        width: 100px;
+        height: 150px;
+        position: absolute;
+        background-color: #ffffaa;
+    }
 }
