解决连线时保存图片失败问题

--- a/src/components/flow/designer/style/flow-attr.scss
+++ b/src/components/flow/designer/style/flow-attr.scss
@@ -1,4 +1,6 @@
 .flow-attr{
+    height: 100%;
+    overflow:hidden;
    .attr-active{
        padding-bottom: 20px;
        ul{
@@ -20,6 +22,9 @@
             border: 1px solid #004849; 
            }
        }
+   }
+   .ant-tabs{
+    position: static;
    } 
 }
 
