--- a/src/components/flow/designer/style/flow-designer.scss
+++ b/src/components/flow/designer/style/flow-designer.scss
@@ -1,15 +1,10 @@
 $primary-color: #409eff;
-
+html {
+    overflow-x: hidden;
+}
 .container {
     border: 2px solid #e4e7ed;
     height: 100%;
-
-    moz-user-select: -moz-none;
-    -moz-user-select: none;
-    -o-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
     user-select: none;
 }
 .logo {
@@ -86,12 +81,12 @@ $primary-color: #409eff;
     background: #f4f6fc;
     height: 32px;
     line-height: 32px;
-    margin: 5px 0;
+    // margin: 5px 0;
     padding-left: 8px;
     text-align: left;
     cursor: move;
-    min-width: 120px;
-    border: 1px dashed #ddd ;
+    min-width: 110px;
+    border: 1px dashed #ddd;
     &:hover {
         color: $primary-color;
         outline: 1px dashed $primary-color;
@@ -131,7 +126,15 @@ $primary-color: #409eff;
 }
 
 .ant-list-item {
-    margin: 5px 15px !important;
+    margin: 5px 5px !important;
+}
+.ant-spin-container{
+    font-size: 12px;
+    margin-top: 5px;
+    padding: 0 15px;
+    .ant-col:last-child {
+        margin-bottom: 5px;
+    }
 }
 .content-header {
     background: #fff;
