--- a/src/components/flow/designer/style/flow-designer.scss
+++ b/src/components/flow/designer/style/flow-designer.scss
@@ -41,6 +41,7 @@ html {
     background: #fafafa;
     height: 100%;
     border: 1px dashed rgba(170, 170, 170, 0.7);
+    // box-shadow: 0px 0px 2px 1px #d1d1d1;
 }
 
 .ant-layout-footer {
